--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
         <!-- Mybatis -->
         <mybatis.version>3.3.0</mybatis.version>
-        <jpa.version></jpa.version>
+        <jpa.version>1.0.1.Final</jpa.version>
 
         <struts2.version>2.3.24</struts2.version>
 
@@ -182,7 +182,7 @@
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <version>1.0.1.Final</version>
+            <version>${jpa.version}</version>
         </dependency>
 
     </dependencies>
@@ -212,7 +212,7 @@
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.0</version>
+                <version>1.3.2</version>
             </plugin>
         </plugins>
 
