--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <mysql.version>5.1.34</mysql.version>
 
         <aspectjweaver.version>1.8.2</aspectjweaver.version>
+        <poi.version>3.9</poi.version>
     </properties>
 
     <dependencies>
@@ -171,6 +172,16 @@
             <version>${mysql.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
 
         <!-- druid 阿里巴巴的数据源 spring需要 用来取代JDBC 具有很多高级的功能 -->
         <dependency>
@@ -183,6 +194,11 @@
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
             <version>${jpa.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
         </dependency>
 
     </dependencies>
