--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -42,6 +42,10 @@
     <filter>
         <filter-name>struts2</filter-name>
         <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+        <!--<init-param>
+            <param-name>config</param-name>
+            <param-value>main/resources/struts.xml</param-value>
+        </init-param>-->
     </filter>
 
     <filter-mapping>
