--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,13 +1,66 @@
-log4j.rootLogger=INFO,A1,R
+#log4j.rootLogger=INFO,A1,R
+#
+#log4j.appender.A1=org.apache.log4j.ConsoleAppender
+#log4j.appender.A1.Target=System.out
+#log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+#log4j.appender.A1.layout.ConversionPattern=[%c]%m%n
+#
+#log4j.appender.R=org.apache.log4j.RollingFileAppender
+#log4j.appender.R.File=crazydog.log
+#log4j.appender.R.MaxFileSize=10MB
+#log4j.appender.R.Threshold=ALL
+#log4j.appender.R.layout=org.apache.log4j.PatternLayout
+#log4j.appender.R.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH\:mm\:ss,SSS}][%c]%m%n
 
-log4j.appender.A1=org.apache.log4j.ConsoleAppender
-log4j.appender.A1.Target=System.out
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=[%c]%m%n
+## Print SQL
+#log4j.logger.com.ibatis=DEBUG
+#log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+#log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+#log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+#log4j.logger.java.sql.Connection=DEBUG
+#log4j.logger.java.sql.Statement=DEBUG
+#log4j.logger.java.sql.PreparedStatement=DEBUG, A1
 
-log4j.appender.R=org.apache.log4j.RollingFileAppender 
-log4j.appender.R.File=crazydog.log
-log4j.appender.R.MaxFileSize=10MB
-log4j.appender.R.Threshold=ALL
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=[%p][%d{yyyy-MM-dd HH\:mm\:ss,SSS}][%c]%m%n
+
+
+####œ‘ æSQL”Ôæ‰≤ø∑÷
+#log4j.logger.com.ibatis=DEBUG
+#log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+#log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+#log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+#log4j.logger.java.sql.Connection=DEBUG
+#log4j.logger.java.sql.Statement=DEBUG
+#log4j.logger.java.sql.PreparedStatement=DEBUG
+
+
+
+
+# Output pattern : date [thread] priority category - message
+log4j.rootLogger=DEBUG, console, logFile
+
+#Console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d [%p] %l - %m%n
+
+#RollingFile
+log4j.appender.logFile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.logFile.File=../logs/adnetwork.log
+log4j.appender.logFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logFile.layout.ConversionPattern=%d [%p] %l - %m%n
+
+
+# SqlMap logging configuration...
+log4j.logger.com.ibatis=debug
+log4j.logger.com.ibatis.db=debug
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=debug
+log4j.logger.com.ibatis.sqlmap.engine.cache.CacheModel=debug
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientImpl=debug
+log4j.logger.com.ibatis.sqlmap.engine.builder.xml.SqlMapParser=debug
+log4j.logger.com.ibatis.common.util.StopWatch=debug
+
+
+log4j.logger.java.sql.Connection=debug
+log4j.logger.java.sql.Statement=debug
+log4j.logger.java.sql.PreparedStatement=debug
+log4j.logger.java.sql.ResultSet=debug
