add web support

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <mysql.version>5.1.34</mysql.version>
 
         <aspectjweaver.version>1.8.2</aspectjweaver.version>
+
         <poi.version>3.9</poi.version>
     </properties>
 
@@ -90,12 +91,12 @@
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-core</artifactId>
             <version>${struts2.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javassist</groupId>
-                    <artifactId>javassist</artifactId>
-                </exclusion>
-            </exclusions>
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<groupId>javassist</groupId>-->
+                    <!--<artifactId>javassist</artifactId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
         </dependency>
 
         <!-- struts2注解包 -->
@@ -172,16 +173,6 @@
             <version>${mysql.version}</version>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>${poi.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>${poi.version}</version>
-        </dependency>
 
         <!-- druid 阿里巴巴的数据源 spring需要 用来取代JDBC 具有很多高级的功能 -->
         <dependency>
@@ -195,10 +186,16 @@
             <artifactId>hibernate-jpa-2.0-api</artifactId>
             <version>${jpa.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>3.9</version>
+            <version>${poi.version}</version>
         </dependency>
 
     </dependencies>
