--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -23,7 +23,7 @@
 
     <filter-mapping>
         <filter-name>struts2</filter-name>
-        <url-pattern>*.action</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <!--解决乱码的filter-->
@@ -39,6 +39,7 @@
     <!--<filter-name>CharacterEncoding</filter-name>-->
     <!--<url-pattern>/*</url-pattern>-->
     <!--</filter-mapping>-->
+
     <welcome-file-list>
         <welcome-file>/index.jsp</welcome-file>
     </welcome-file-list>
