--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 
         <!-- Mybatis -->
         <mybatis.version>3.3.0</mybatis.version>
+        <mybatis-generator-maven-plugin.version>1.3.2</mybatis-generator-maven-plugin.version>
 
         <!--struts2-->
         <struts2.version>2.3.24</struts2.version>
@@ -37,12 +38,16 @@
 
         <!-- Logging -->
         <slf4j.version>1.7.5</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
 
         <!--mysql-->
         <mysql.version>5.1.34</mysql.version>
+        <druid.version>1.0.15</druid.version>
 
         <!--poi-->
         <poi.version>3.9</poi.version>
+
+        <jetty.version>8.1.5.v20120716</jetty.version>
     </properties>
 
     <dependencies>
@@ -142,7 +147,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>${log4j.version}</version>
         </dependency>
 
         <!-- Test Artifacts -->
@@ -165,7 +170,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.0.15</version>
+            <version>${druid.version}</version>
         </dependency>
 
         <!--poi apache的开源类库，开源操作Office的文件-->
@@ -197,7 +202,7 @@
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>8.1.5.v20120716</version>
+                <version>${jetty.version}</version>
                 <configuration>
                     <stopPort>9966</stopPort>
                     <stopKey>foo</stopKey>
@@ -209,11 +214,10 @@
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
-                <version>1.3.2</version>
+                <version>${mybatis-generator-maven-plugin.version}</version>
             </plugin>
         </plugins>
 
-        <defaultGoal>compile</defaultGoal>
     </build>
 
 </project>
