--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,18 @@
 
     <build>
         <plugins>
+
+            <!--打包成war更精细配置的插件-->
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <warSourceDirectory>
+                        ${basedir}/web
+                    </warSourceDirectory>
+                    <webXml>${basedir}/web/WEB-INF/web.xml</webXml>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
