--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -26,6 +26,16 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!-- druid监控应用使用数据库的信息-->
+    <servlet>
+        <servlet-name>DruidStatView</servlet-name>
+        <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DruidStatView</servlet-name>
+        <url-pattern>/druid/*</url-pattern>
+    </servlet-mapping>
+
     <!--解决乱码的filter-->
     <!--<filter>-->
     <!--<filter-name>CharacterEncoding</filter-name>-->
