添加物品领用明细模块

--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,8 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
-            <scope>provided</scope>
+            <!--Tomcat 不自带jstl-->
+            <!--<scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
