--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <!-- Mybatis -->
         <mybatis.version>3.3.0</mybatis.version>
         <mybatis-generator-maven-plugin.version>1.3.2</mybatis-generator-maven-plugin.version>
+        <pagehelper.version>4.0.1</pagehelper.version>
 
         <!--struts2-->
         <struts2.version>2.3.24</struts2.version>
@@ -85,6 +86,13 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
+        </dependency>
+
+        <!--分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
         </dependency>
 
         <!--mybatis和Spring整合-->
