--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <!-- Mybatis -->
         <mybatis.version>3.3.0</mybatis.version>
         <mybatis-generator-maven-plugin.version>1.3.2</mybatis-generator-maven-plugin.version>
+        <mybatis-mapper.version>3.1.0</mybatis-mapper.version>
         <pagehelper.version>4.0.1</pagehelper.version>
 
         <!--struts2-->
@@ -94,6 +95,13 @@
             <artifactId>pagehelper</artifactId>
             <version>${pagehelper.version}</version>
         </dependency>
+
+        <!--Mybatis通用Mapper开源框架，使得可以不写mapper文件-->
+        <!--<dependency>-->
+            <!--<groupId>tk.mybatis</groupId>-->
+            <!--<artifactId>mapper</artifactId>-->
+            <!--<version>${mybatis-mapper.version}</version>-->
+        <!--</dependency>-->
 
         <!--mybatis和Spring整合-->
         <dependency>
@@ -257,6 +265,11 @@
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>${mybatis-generator-maven-plugin.version}</version>
+                <configuration>
+                    <configurationFile>${basedir}/src/main/resources/generatorConfig.xml</configurationFile>
+                    <overwrite>true</overwrite>
+                    <verbose>true</verbose>
+                </configuration>
             </plugin>
         </plugins>
 
