--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -15,6 +15,24 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <filter>
+    <filter-name>LoginFilter</filter-name>
+    <filter-class>org.goodsManagement.controller.filter.LoginFilter</filter-class>
+    </filter>
+
+    <!--<filter>-->
+        <!--<filter-name>loginFilter</filter-name>-->
+        <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+        <!--<init-param>-->
+            <!--<param-name>targetFilterLifecycle</param-name>-->
+            <!--<param-value>true</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
+
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <!-- Struts2配置 -->
     <filter>
         <filter-name>struts2</filter-name>
